public/css/style.css
html, body {
	margin: 0;
	height: 100%;
}

#mapCanvas { 
	float: right;
	height: 100%;
	width: 100%;
}

#mapLeft {
	position: fixed;
	float: left;	
	width: 20%;
	height: 80%;
	z-index: 10;
	overflow: auto;
	top: 10%; 
	opacity: .65;
}

#photoList {
	overflow: auto;
	list-style-type: none;
}

.photo {
	padding-right: 8px;
	padding-top: 8px;
	padding-left: 20px;
	padding-bottom: 8px;
	cursor: pointer;
	border: solid 1px;
	background-color: #98bf21;
	outline: 0;
	color: inherit; 
	text-decoration: none;
	display: block;
}

.photo:hover {
	background-color: #bf2148;
}

.pinImage {
	position: relative;
	left: 30%;
}

